ensure start and end scroll aligns with figma

--- a/express/code/features/toc-seo/toc-seo.css
+++ b/express/code/features/toc-seo/toc-seo.css
@@ -5,7 +5,6 @@
   left: 0;
   width: 250px;
   z-index: 1;
-  margin-top: var(--spacing-600);
   padding-left: var(--spacing-600);
   padding-top: 0;
   padding-bottom: 0;
